src/objects/QuoteLineItem.object
<CustomObject>
        <fields>
        <fullName>MX_SB_VTS_Casa_o_Departamento__c</fullName>
        <label>Casa o Departamento</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Piso_Habitado__c</fullName>
        <label>Piso habitado?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Meses_sin_Intereses__c</fullName>
        <label>Meses sin Intereses BBVA</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_No_Pisos_Inmueble__c</fullName>
        <label>Numero de Pisos</label>
        <length>5</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_Techo_Tabique_Ladrillo_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Techo Tabique, Ladrillo, Block</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>MX_SB_VTS_Muros_Tabique_Ladrillo_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Muros de Tabique, Ladrillo, Block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Cercania_Mantos_Aquiferos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vive cerca de rios, lagos o mar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Anio__c</fullName>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Danos_Contenidos__c</fullName>
        <label>Daños a los Contenidos</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Danos_Inmueble__c</fullName>
        <label>Daños Inmueble</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Descuento_Facultado__c</fullName>
        <label>Descuento facultado</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Equipo_Electronico__c</fullName>
        <label>Daños al Equipo Electrónico</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_FormaPAgo__c</fullName>
        <label>Forma de pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debito</fullName>
                </value>
				<value>
                    <fullName>Mensual</fullName>
                </value>
				<value>
                    <fullName>Trimestral</fullName>
                </value>
				<value>
                    <fullName>Semestral</fullName>
                </value>
				<value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Frecuencia_de_Pago__c</fullName>
        <label>Frecuencia de Pago</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mensual</fullName>
                </value>
                <value>
                    <fullName>Trimestral</fullName>
                </value>
                <value>
                    <fullName>Semestral</fullName>
                </value>
                <value>
                    <fullName>Anual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Monto_Mensualidad__c</fullName>
        <label>Monto de la Mensualidad</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Numero_de_Serie__c</fullName>
        <label>Numero de Serie</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_PersonaPolizaAsegurado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Persona contrata poliza es el asegurado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Plan__c</fullName>
        <label>Plan</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Por_Robo__c</fullName>
        <label>Por Robo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Precio_Anual__c</fullName>
        <label>Precio Anual</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Proteccion_Sismo__c</fullName>
        <label>Proteccion Contra Sismo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CON</fullName>
                </value>
                <value>
                    <fullName>SIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_RespPrivada_Familiar__c</fullName>
        <label>Responsabilidad Civil Privada y Familiar</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Rotura_Cristales__c</fullName>
        <label>Rotura de Cristales</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Version__c</fullName>
        <label>Versión</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Alguien_mas_conduce__c</fullName>
        <description>Indica si alguien mas aparte del asegurado conduce el vehículo.</description>
        <label>Alguien mas conduce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Asegurado_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Asegurado Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Asegurado_Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Asegurado Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Circulacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Circulación</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Descuento_con_cupones__c</fullName>
        <description>tiene descuento de cupones</description>
        <label>Descuento cupones</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_EsContratante__c</fullName>
        <description>Indica si el asegurado es contratante o no</description>
        <label>¿Es contratante?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_EstatusCotizacion__c</fullName>
        <description>Estatus de la Cotización asociada</description>
        <inlineHelpText>Estatus de la Cotización asociada al OpportunityLineItem</inlineHelpText>
        <label>Estatus de la cotización</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Creada</fullName>
                    <default>true</default>
                    <label>Creada</label>
                </value>
                <value>
                    <fullName>Tarificada</fullName>
                </value>
                <value>
                    <fullName>Formalizada</fullName>
                </value>
                <value>
                    <fullName>Emitida</fullName>
                </value>
                <value>
                    <fullName>Cobrada</fullName>
                </value>
                <value>
                    <fullName>Cancelada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Folio_Cotizacion__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Folio Cotización</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_Marca__c</fullName>
        <description>Marca del vehículo asegurado.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Marca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_Modelo__c</fullName>
        <description>Año del vehículo asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Modelo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_SaleACarretera__c</fullName>
        <description>indica si el vehículo asegurado sale a carretera o no.</description>
        <label>Sale a carretera</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Sexo__c</fullName>
        <description>Sexo del asegurado</description>
        <label>Sexo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Masculino</fullName>
                </value>
                <value>
                    <fullName>Femenino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_Tipo_de_auto__c</fullName>
        <description>Tipo de auto asegurado</description>
        <label>Tipo de auto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Pick Up</fullName>
                </value>
                <value>
                    <fullName>Camion (+3.5 Toneladas)</fullName>
                </value>
                <value>
                    <fullName>Moto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_apellidoMaternoAsegurado__c</fullName>
        <description>Apellido materno del asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido materno del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_apellidoPaternoAsegurado__c</fullName>
        <description>Apellido paterno del asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Apellido paterno del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_celularAsegurado__c</fullName>
        <label>Daños al Equipo Electrónico</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WB_comentariosPersonalizados__c</fullName>
        <description>Comentarios adicionales por parte del asegurado.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comentarios de personalización</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_cuenta_con_dispositivo_satelital__c</fullName>
        <description>indica si el vehículo asegurado cuenta con algún dispositivo satelital.</description>
        <label>cuenta con dispositivo satelital</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_edad_de_conductor_adicional__c</fullName>
        <description>Indica la edad de conductor adicional si es que existe.</description>
        <label>Edad de conductor adicional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_emailAsegurado__c</fullName>
        <description>Email del asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_existen_conductores_adicionales__c</fullName>
        <description>Indica si existen conductores adicionales al asegurado.</description>
        <label>Existen conductores adicionales</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SI</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WB_fechaEmision__c</fullName>
        <description>Fecha emisión póliza</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha Emisión</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MX_WB_noMotor__c</fullName>
        <description>Indica el número de motor del vehículo asegurado.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de motor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_noPoliza__c</fullName>
        <description>Se almacena el número de póliza generado en la venta.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Número de póliza emitida</inlineHelpText>
        <label>Número de Póliza</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_nombreAsegurado__c</fullName>
        <description>Nombre del asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre del asegurado</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_numeroSerie__c</fullName>
        <description>Número de serie del vehículo asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Número de serie</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_origen__c</fullName>
        <description>Origen del vehículo asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Origen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_placas__c</fullName>
        <description>Placas del vehículo asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Placas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_subMarca__c</fullName>
        <description>Sub marca del vehículo asegurado</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sub marca</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MX_WB_telefonoAsegurado__c</fullName>
        <label>Daños al Equipo Electrónico</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Aneurisma_Trombosis_Embolia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aneurisma, Trombosis, Embolia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Cancer_Tumores_Leucemia_Lupus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancer, Tumores, Leucemia, Lupus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_EmficemaBronquitisTuberculosis__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Emficema, Bronquitis, Tuberculosis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Insuficiencias_Cirrosis_Hepati__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insuficiencias, Cirrosis, Hepatitis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Tipo_Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tipo Plan</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Total_Fallecimiento__c</fullName>
        <label>Total Fallecimiento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Total_Gastos_Funerarios__c</fullName>
        <label>Total Gastos Funerarios</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_SB_VTS_Total_Muerte_Accidental__c</fullName>
        <label>Total Muerte Accidental</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>